<resources>
    <string name="app_name">Total Health</string>

    <!-- Notification Strings -->
    <string name="channel_description">
        Daily Reminder to Log Food and Water Intake
    </string>
    <string name="channel_name">Daily Reminders</string>

    <!--Icon Strings -->
    <string name="water_icon">Water Icon</string>
    <string name="food_icon">Food Icon</string>

    <!-- Totals  Strings -->
    <string name="total_water_intake_text">Water:</string>
    <string name="total_caloric_intake_text">Calories:</string>

    <!-- Button Strings -->
    <string name="button_add_water_label">Add Water</string>
    <string name="button_add_food_label">Add Food</string>

    <!-- Strings for adding a new food item -->
    <string name="food_name_hint">Enter food name</string>
    <string name="calories_hint">Enter calories (kcal)</string>
    <string name="submit">Submit</string>

    <!-- Strings for adding a new water item -->
    <string name="hint_water_amount_oz">Enter water amount (oz)</string>
    <string name="water">Water: %1$d oz</string>
    <string name="calories">Calories: %1$d kcal</string>
    <string name="navigation_log">Log</string>
    <string name="navigation_overview">Overview</string>


    <!--- Strings for the overview page -->
    <string name="calories_min_max">
        Calories: Min: %1$d oz, Max: %2$d oz
    </string>
    <string name="average_calories">Average Calories: %1$d kcal</string>

    <string name="water_intake_min_max">
        Water: Min: %1$d oz, Max: %2$d oz
    </string>
    <string name="average_total_water_intake">Average per Entry: %1$d oz</string>
    <string name="average_daily_water_intake">Average per Day: %1$d oz</string>
    <string name="daily_reminder">Daily Reminders?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>