<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/food_list_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Nested ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodListFragment">

        <!-- Toggle for Daily Logging Reminders -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_daily_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_reminder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="32dp"/>

        <!-- RecyclerView for Food Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_food_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/switch_daily_reminder"
            app:layout_constraintBottom_toTopOf="@id/add_entry_button_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/food_item" />

        <!-- Bottom Row LinearLayout for Buttons -->
        <LinearLayout
            android:id="@+id/add_entry_button_row"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_add_water"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:text="@string/button_add_water_label" />

            <Button
                android:id="@+id/button_add_food"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:text="@string/button_add_food_label" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>



